--- a/src/lab/exp6/simulation/SwitchCase/index.html
+++ b/src/lab/exp6/simulation/SwitchCase/index.html
@@ -54,6 +54,8 @@
 		<div 	id = 'defaultId'      >&emsp;&emsp;default : str = null;</div>
 		<div 	id = 'defaultBreakId'   class='break'	 >&emsp;&emsp;&emsp;break; </div>
 		<div 	id = 'closeBrc1Id'    >&emsp;}</div>
+		<div    id = 'ifId'           >&emsp;if ( strcmp( str, 'Saturday' ) { </div>
+		<div    id = 'holidayId'      >&emsp;&emsp;printf ( 'HOLIDAY' ); }</div>
 		<div 	id = 'ifId'           >&emsp;if ( strcmp( str, 'Sunday' ) == 0 ) {</div>
 		<div 	id = 'holidayId'      >&emsp;&emsp;printf ( 'HOLIDAY' ); }</div>
 		<div 	id = 'elseIfId'       >&emsp;else if ( str != null ) {</div>
